# CLIC

./: .dockerignore  .gitignore  README.md  dockerfile_CLIC
src/: .gitignore  environment.yml  environment_cu128.yml  main_IIL.py  main_IIL_kuka_real.py  pyproject.toml  requirements.txt  requirements_cu128.txt
src/agents/: BD_COACH.py  CLIC_Explicit_tf.py  CLIC_tf.py  CLIC_torch.py  HG_DAgger.py  PVP.py  agent_selector.py  diffusion_policy.py  ibc.py  ibc_torch.py  mcmc.py  mcmc_torch.py
src/agents/DP_model/: energy_nn.py  neural_network.py
src/config/: train_Ambient_Diffusion.yaml  train_BD_COACH.yaml  train_CLIC.yaml  train_CLIC_Circular.yaml  train_CLIC_Explicit.yaml  train_CLIC_Half.yaml  train_Diffusion.yaml  train_HG_DAgger.yaml  train_IBC.yaml  train_PVP.yaml
src/config/task/: line_following.yaml  metaworld_assembly.yaml  metaworld_hammer.yaml  pickcan.yaml  pushT.yaml  square.yaml  twoArmLift.yaml
src/config_real/: train_CLIC.yaml  train_Diffusion.yaml  train_IBC.yaml
src/config_real/task/: kuka_6d_low_dim_vel.yaml  (+1 more)
src/env/: env_selector.py  env_selector_real_robot.py
src/tools/: Diffusion_vectors_visualize_2d.py  Q_value_visualize_1d.py  Q_value_visualize_2d.py  Q_value_visualize_2d_torch.py  buffer.py  buffer_trajectory.py  feedback.py  feedback_keyboard_1d.py  feedback_keyboard_2d.py  feedback_keyboard_3d.py  feedback_keyboard_3d_qbhand.py  feedback_keyboard_multi_2d.py  feedback_spacenav.py  feedback_spacenav_position.py  hdf5_traj_buffer.py  oracle_feedback.py  transfer_CLIC_data_to_BC_data.py  visualizer_corrections.py
(+44 files in other folders)
